--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "figlet": "^1.7.0",
     "process": "^0.11.10",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+    "zlib": "^1.0.5"
   }
 }
