--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "process": "^0.11.10",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.0",
+    "uuid": "^10.0.0",
     "zlib": "^1.0.5"
   }
 }
